Creating section separaters with an h3 and updated the css

--- a/html/index.html
+++ b/html/index.html
@@ -7,25 +7,31 @@
     <title>EMW</title>
 </head>
 <body>
-  <h1>my portfolio</h1>  
-  <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
-  <!-- <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="300" height="200">
-  <img src="/img/celery.jpg" alt="celery" width="300" height="200">
-  <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
-  <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
-  <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="300" height="200">
-  <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
-  <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
-  <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
-  <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
-  <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
-  <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200"> -->
+    <h1>my portfolio</h1>  
+    <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
+    <!-- <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="300" height="200">
+    <img src="/img/celery.jpg" alt="celery" width="300" height="200">
+    <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
+    <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
+    <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="300" height="200">
+    <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
+    <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
+    <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
+    <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
+    <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
+    <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200"> -->
 
-  <h2>~ coffee ~</h2>
+    <h2>~ coffee ~</h2>
+    <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
+    <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
+    <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+    <br>
+    <h3>~ ~ ~</h3>
 
-  <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
-  <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
-  <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+    <h2>~ star mission ~</h2>
+    <p>mobile game demo design</p>
+
+
 
 
 
