--- a/html/index.html
+++ b/html/index.html
@@ -27,10 +27,13 @@
     <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
     <br>
     <h3>~ ~ ~</h3>
-
+    <br>
     <h2>~ star mission ~</h2>
     <p>mobile game demo design</p>
-    <img src="" alt="">
+    <img src="/img/star-mission_1.png" alt="star-mission_1" width="300" height="200">
+    <img src="/img/star-mission_2.png" alt="star-mission_2" width="300" height="200">
+    <img src="/img/star-mission_3.png" alt="star-mission_3" width="300" height="200">
+    <img src="/img/star-mission_4.png" alt="star-mission_4" width="300" height="200">
 
 
 
