--- a/html/index.html
+++ b/html/index.html
@@ -20,20 +20,24 @@
     <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
     <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
     <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200"> -->
-
-    <h2>~ coffee ~</h2>
-    <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
-    <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
-    <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+    <div class="gallery">
+        <h2>~ coffee ~</h2>
+        <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
+        <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
+        <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+    </div>
     <br>
     <h3>~ ~ ~</h3>
     <br>
-    <h2>~ star mission ~</h2>
-    <p>mobile game demo design</p>
-    <img src="/img/star-mission_1.png" alt="star-mission_1" width="300" height="200">
-    <img src="/img/star-mission_2.png" alt="star-mission_2" width="300" height="200">
-    <img src="/img/star-mission_3.png" alt="star-mission_3" width="300" height="200">
-    <img src="/img/star-mission_4.png" alt="star-mission_4" width="300" height="200">
+    <div class="gallery">
+        <h2>~ star mission ~</h2>
+        <p>mobile game demo design</p>
+        <img src="/img/star-mission_1.png" alt="star-mission_1" width="300" height="200">
+        <img src="/img/star-mission_2.png" alt="star-mission_2" width="300" height="200">
+        <img src="/img/star-mission_3.png" alt="star-mission_3" width="300" height="200">
+        <img src="/img/star-mission_4.png" alt="star-mission_4" width="300" height="200">
+    </div>
+    
 
 
 
