--- a/html/index.html
+++ b/html/index.html
@@ -9,18 +9,6 @@
 <body>
     <h1>my portfolio</h1>  
     <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
-    <!-- <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="300" height="200">
-    <img src="/img/celery.jpg" alt="celery" width="300" height="200">
-    <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
-    <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
-    <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="300" height="200">
-    <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
-    <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
-    <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
-    <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
-    <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
-    <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200"> -->
-    
     <h2>~ coffee ~</h2>
     <div class="gallery-coffee">
         <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
@@ -39,6 +27,29 @@
     <div class="gallery-star-mission-2">
         <img src="/img/star-mission_3.png" alt="star-mission_3" width="300" height="200">
         <img src="/img/star-mission_4.png" alt="star-mission_4" width="300" height="200">
+    </div>
+    <br>
+    <h3>~ ~ ~</h3>
+    <br>
+    <h2>~ guitar ~</h2>
+    <div class="gallery-guitar">
+        <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="300" height="200">
+        <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="300" height="200">
+    </div>
+    <br>
+    <h3>~ ~ ~</h3>
+    <br>\
+    <h2>~ the random works ~</h2>
+    <div class="gallery-random-works">
+        <img src="/img/celery.jpg" alt="celery" width="300" height="200">
+        <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
+        <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
+        <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
+        <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
+        <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
+        <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
+        <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
+        <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
     </div>
     
 
