Was going to use a carousel for the images, but it was too much work to get it to work with the images I have (may see if I can apply it in a future project)

--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,36 @@
     <br>
     <h1>my portfolio</h1>  
     <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
+
+    <!-- 
+    Was going to use a carousel for the images, but it was too much work to get it to work with the images I have.
+    
+    <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/img/celery.jpg" class="d-block w-100" width="400" height="500" alt="celery">
+          </div>
+          <div class="carousel-item">
+            <img src="/img/friday-the-13th.jpg" class="d-block w-100"  width="400" height="500" alt="friday-the-13th">
+          </div>
+          <div class="carousel-item">
+            <img src="/img/hand-sanitizer.jpg" class="d-block w-100" width="400" height="500" alt="hand-sanitizer">
+          </div>
+          <div class="carousel-item">
+            <img src="/img/lollipop.jpg" class="d-block w-100" width="400" height="500" alt="lollipop">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div> -->
+    <br>
+    <h3>~ ~ ~</h3>
     <h2>~ coffee ~</h2>
     <div class="gallery-coffee">
         <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
@@ -33,28 +63,24 @@
     <br>
     <h3>~ ~ ~</h3>
     <br>
+    <h2>~ guitar ~</h2>
+    <div class="gallery-guitar">
+        <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="400" height="300">
+        <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
+    </div>
+    <br>
+    <h3>~ ~ ~</h3>
+    <br>
     <h2>~ star mission ~</h2>
     <p>mobile game demo design</p>
     <div class="gallery-star-mission-1">
-        <img src="/img/star-mission_1.png" alt="star-mission_1" width="300" height="200">
-        <img src="/img/star-mission_2.png" alt="star-mission_2" width="300" height="200">
+        <img src="/img/star-mission_1.png" alt="star-mission_1" width="500" height="400">
+        <img src="/img/star-mission_2.png" alt="star-mission_2" width="500" height="400">
     </div>
     <div class="gallery-star-mission-2">
-        <img src="/img/star-mission_3.png" alt="star-mission_3" width="300" height="200">
-        <img src="/img/star-mission_4.png" alt="star-mission_4" width="300" height="200">
+        <img src="/img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
+        <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
     </div>
-    <br>
-    <h3>~ ~ ~</h3>
-    <br>
-    <h2>~ guitar ~</h2>
-    <div class="gallery-guitar">
-        <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="300" height="200">
-        <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="300" height="200">
-    </div>
-    <br>
-    <h3>~ ~ ~</h3>
-    <br>\
-    <h2>~ the random works ~</h2>
     <div class="gallery-random-works">
         <img src="/img/celery.jpg" alt="celery" width="300" height="200">
         <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
