--- a/html/contact.html
+++ b/html/contact.html
@@ -8,6 +8,9 @@
     <title>contact</title>
 </head>
 <body>
+  <div class="logo">
+    <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+  </div>
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -21,6 +24,10 @@
             </li>
           </ul>
     </header>
+
+    <footer class="copyright">
+      <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
