--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,9 @@
     <title>EMW</title>
 </head>
 <body>
+  <div class="logo">
+    <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+  </div>
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -22,7 +25,7 @@
           </ul>
     </header>
     <br>
-    <h1>my portfolio</h1>  
+    <h1>&#128151; my portfolio &#128151;</h1>  
     <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
 
     <!-- 
@@ -54,7 +57,9 @@
       </div> -->
     <br>
     <h3>~ ~ ~</h3>
-    <h2>~ coffee ~</h2>
+    <br>
+    <h2>&#9749; coffee &#9749;</h2>
+    <br>
     <div class="gallery-coffee">
         <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
         <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
@@ -63,7 +68,8 @@
     <br>
     <h3>~ ~ ~</h3>
     <br>
-    <h2>~ guitar ~</h2>
+    <h2>&#127928; guitar &#127928;</h2>
+    <br>
     <div class="gallery-guitar">
         <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="400" height="300">
         <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
@@ -71,8 +77,9 @@
     <br>
     <h3>~ ~ ~</h3>
     <br>
-    <h2>~ star mission ~</h2>
+    <h2>&#127776; star mission &#127776;</h2>
     <p>mobile game demo design</p>
+    <br>
     <div class="gallery-star-mission-1">
         <img src="/img/star-mission_1.png" alt="star-mission_1" width="500" height="400">
         <img src="/img/star-mission_2.png" alt="star-mission_2" width="500" height="400">
@@ -81,19 +88,44 @@
         <img src="/img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
         <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
     </div>
+    <br>
+    <h3>~ ~ ~</h3>
+    <br>
+    <h2>&#129412; random works &#129412;</h2>
+    <br>
     <div class="gallery-random-works">
+      <div class="gallery-random-works-1">
         <img src="/img/celery.jpg" alt="celery" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-2">
         <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-3">
         <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-4">
         <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
-        <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
-        <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
-        <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-5">
         <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-6">
+        <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-7">
+        <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-8">
+        <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
+      </div>
+      <div class="gallery-random-works-9">
         <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
+      </div>
     </div>
     
-
+    <footer class="copyright">
+      <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
+    </footer>
 
 
 
