- made the logo link to index.html (similar perk most modern sites use) - made the navbar for index.html sticky, since  there is a lot of content (another perk most modern sites use)

--- a/html/index.html
+++ b/html/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <div class="logo">
-    <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    <a href="/html/index.html">
+      <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    </a>
   </div>
-    <header class="nav-bar-background">
+    <header class="nav-bar-background sticky-navbar">
         <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/html/index.html">home</a>
