--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <div class="logo">
-    <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    <a href="/html/index.html">
+      <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    </a>
   </div>
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
