--- a/html/index.html
+++ b/html/index.html
@@ -57,28 +57,21 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div> -->
-    <br>
-    <h3>~ ~ ~</h3>
-    <br>
-    <h2>&#9749; coffee &#9749;</h2>
-    <br>
-    <div class="gallery-coffee">
-        <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
-        <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
-        <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+    <div class="coffee">
+      <h2>&#9749; coffee &#9749;</h2>
+      <br>
+      <div class="gallery-coffee">
+          <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
+          <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
+          <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+      </div>
     </div>
-    <br>
-    <h3>~ ~ ~</h3>
-    <br>
     <h2>&#127928; guitar &#127928;</h2>
     <br>
     <div class="gallery-guitar">
         <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="400" height="300">
         <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
     </div>
-    <br>
-    <h3>~ ~ ~</h3>
-    <br>
     <h2>&#127776; star mission &#127776;</h2>
     <p>mobile game demo design</p>
     <br>
@@ -90,9 +83,6 @@
         <img src="/img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
         <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
     </div>
-    <br>
-    <h3>~ ~ ~</h3>
-    <br>
     <h2>&#129412; random works &#129412;</h2>
     <br>
     <div class="gallery-random-works">
