- Put "my portfolio" into a div with the class .into - This way could update the padding and font size - To make it more viewable and readable - Even update font size of the nav links to the sake of readablity

--- a/html/index.html
+++ b/html/index.html
@@ -26,9 +26,10 @@
             </li>
           </ul>
     </header>
-    <br>
-    <h1>&#128151; my portfolio &#128151;</h1>  
-    <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
+    <div class="intro">
+      <h1>&#128151; my portfolio &#128151;</h1>  
+      <p>Welcome to my portfolio! Here you can find a collection of my work and projects.</p>
+    </div>
 
     <!-- 
     Was going to use a carousel for the images, but it was too much work to get it to work with the images I have.
