- Created "guitar" section div and applied the bg color, padding, and font size - Updated the "coffee" section padding to make it a little bigger

--- a/html/index.html
+++ b/html/index.html
@@ -67,11 +67,13 @@
           <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
       </div>
     </div>
-    <h2>&#127928; guitar &#127928;</h2>
-    <br>
-    <div class="gallery-guitar">
-        <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="400" height="300">
-        <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
+    <div class="guitar">
+      <h2>&#127928; guitar &#127928;</h2>
+      <br>
+      <div class="gallery-guitar">
+          <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="400" height="300">
+          <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
+      </div>
     </div>
     <h2>&#127776; star mission &#127776;</h2>
     <p>mobile game demo design</p>
