- Applied "star-mission" into it's own div to add css attributes - Deleted "p" statement, thought it was unnessary - Updated the padding for .coffee, .guitar, and .star-mission to 2.8em

--- a/html/index.html
+++ b/html/index.html
@@ -75,16 +75,17 @@
           <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
       </div>
     </div>
-    <h2>&#127776; star mission &#127776;</h2>
-    <p>mobile game demo design</p>
-    <br>
-    <div class="gallery-star-mission-1">
-        <img src="/img/star-mission_1.png" alt="star-mission_1" width="500" height="400">
-        <img src="/img/star-mission_2.png" alt="star-mission_2" width="500" height="400">
-    </div>
-    <div class="gallery-star-mission-2">
-        <img src="/img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
-        <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
+    <div class="star-mission">
+      <h2>&#127776; star mission &#127776;</h2>
+      <br>
+      <div class="gallery-star-mission-1">
+          <img src="/img/star-mission_1.png" alt="star-mission_1" width="500" height="400">
+          <img src="/img/star-mission_2.png" alt="star-mission_2" width="500" height="400">
+      </div>
+      <div class="gallery-star-mission-2">
+          <img src="/img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
+          <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
+      </div>
     </div>
     <h2>&#129412; random works &#129412;</h2>
     <br>
