- Moved .copyright to the bottom to be more organized - Applied random-works to a div and added the css to make it look nice and refreshing

--- a/html/index.html
+++ b/html/index.html
@@ -87,37 +87,40 @@
           <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
       </div>
     </div>
-    <h2>&#129412; random works &#129412;</h2>
-    <br>
-    <div class="gallery-random-works">
-      <div class="gallery-random-works-1">
-        <img src="/img/celery.jpg" alt="celery" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-2">
-        <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-3">
-        <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-4">
-        <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-5">
-        <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-6">
-        <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-7">
-        <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-8">
-        <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
-      </div>
-      <div class="gallery-random-works-9">
-        <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
+    <div class="random-works">
+      <h2>&#129412; random works &#129412;</h2>
+      <br>
+      <div class="gallery-random-works">
+        <div class="gallery-random-works-1">
+          <img src="/img/celery.jpg" alt="celery" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-2">
+          <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-3">
+          <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-4">
+          <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-5">
+          <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-6">
+          <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-7">
+          <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-8">
+          <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
+        </div>
+        <div class="gallery-random-works-9">
+          <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
+        </div>
       </div>
     </div>
+    
     
     <footer class="copyright">
       <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
