- Added About h1 element - Added portrait illustation image - Added p elements with about statement - Planning to update img and p element to divs so they may align better

--- a/html/about.html
+++ b/html/about.html
@@ -27,6 +27,15 @@
           </ul>
     </header>
 
+    <h1>about</h1>
+
+    <img src="/img/portrait-illustation.JPG" alt="portrait-illustation" width="400" height="500" class="portrait-illustation">
+
+    <p>Hi! I'm Elizabeth Watkins, a graphic designer and illustrator based in the United States. I love creating unique and eye-catching designs that tell a story. My work is inspired by my love for nature, art, and the world around me.</p>
+    <p>In my free time, I enjoy exploring new places, reading books, and spending time with my family and friends. I'm always looking for new challenges and opportunities to grow as a designer.</p>
+    <p>Thank you for visiting my portfolio! If you have any questions or would like to collaborate, feel free to reach out.</p>
+    <p>~ elizabeth</p>
+
     <footer class="copyright">
       <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
     </footer>
