- Added the last image in the img to random works section of index.html - Applied the need css for the img section

--- a/html/index.html
+++ b/html/index.html
@@ -118,6 +118,9 @@
         <div class="gallery-random-works-9">
           <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
         </div>
+        <div class="gallery-random-works-10">
+          <img src="/img/Handshake.jpg" alt="Handshake" width="300" height="200">
+        </div>
       </div>
     </div>
     
