- Added h1 element that says "contact" to title the contact.html - Applied css within the div of the h1 element similar to about.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -27,6 +27,10 @@
           </ul>
     </header>
 
+    <div class="contact">
+      <h1>contact</h1>
+    </div>
+
     <footer class="copyright">
       <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
     </footer>
