--- a/html/contact.html
+++ b/html/contact.html
@@ -31,6 +31,24 @@
       <h1>contact</h1>
     </div>
 
+    <form action="">
+      <div class="contact-container">
+        <div class="contact-form">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+        </div>
+        <div class="contact-form">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="contact-form">
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" rows="4" required></textarea>
+        </div>
+        <button type="submit">Submit</button>
+      </div>
+    </form>
+
     <footer class="copyright">
       <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
     </footer>
