- Updated the form to include formspree.io so the form is submitable - Updated the css of the form container including the text alignment, padding, and font size

--- a/html/contact.html
+++ b/html/contact.html
@@ -31,7 +31,12 @@
       <h1>contact</h1>
     </div>
 
-    <form action="">
+    <form action="https://formspree.io/f/mnnpwbwn" method="POST" class="contact-form-container" target="_blank">
+      <div class="contact-intro">
+        <p>If you have any questions or would like to collaborate, feel free to reach out!</p>
+        <p>~ elizabeth</p>
+      </div>
+      <br>
       <div class="contact-container">
         <div class="contact-form">
           <label for="name">Name:</label>
