- Cleaned up code for index.html, contact.html, about.html, and style.css - Deleted the commented out carousel bootstrap from index.html and style.css - Added css to .contact-form, .message-container, and .submit-button - This way the form, text area, and submit button look nice

--- a/html/contact.html
+++ b/html/contact.html
@@ -13,6 +13,7 @@
       <img src="/img/logo.jpg" alt="logo" width="200" height="200">
     </a>
   </div>
+
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
             <li class="nav-item">
@@ -46,11 +47,11 @@
           <label for="email">Email:</label>
           <input type="email" id="email" name="email" required>
         </div>
-        <div class="contact-form">
-          <label for="message">Message:</label>
+        <div class="contact-form message-container">
+          <label for="message"></label>
           <textarea id="message" name="message" rows="4" required></textarea>
         </div>
-        <button type="submit">Submit</button>
+          <button type="submit" class="submit-button">Submit</button>
       </div>
     </form>
 
