--- a/html/contact.html
+++ b/html/contact.html
@@ -40,16 +40,16 @@
       <br>
       <div class="contact-container">
         <div class="contact-form">
-          <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+          <label for="name"></label>
+          <input type="text" id="name" name="name" placeholder="Name" required>
         </div>
         <div class="contact-form">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <label for="email"></label>
+          <input type="email" id="email" name="email" placeholder="Email" required>
         </div>
         <div class="contact-form message-container">
           <label for="message"></label>
-          <textarea id="message" name="message" rows="4" required></textarea>
+          <textarea id="message" name="message" rows="4" placeholder="Ask Me Anything . . ." required></textarea>
         </div>
           <button type="submit" class="submit-button">Submit</button>
       </div>
