--- a/html/contact.html
+++ b/html/contact.html
@@ -47,7 +47,7 @@
           <label for="email"></label>
           <input type="email" id="email" name="email" placeholder="Email" required>
         </div>
-        <div class="contact-form message-container">
+        <div class="contact-form">
           <label for="message"></label>
           <textarea id="message" name="message" rows="4" placeholder="Ask Me Anything . . ." required></textarea>
         </div>
