--- a/html/index.html
+++ b/html/index.html
@@ -47,8 +47,8 @@
       <h2>&#127928; guitar &#127928;</h2>
       <br>
       <div class="gallery-guitar">
-          <img src="/img/acoustic -xxv.jpg" alt="warped acoustic guitar" width="400" height="300">
-          <img src="/img/lespaul - xxxviii.jpg" alt="lespaul" width="400" height="300">
+          <img src="/img/acoustic.jpg" alt="warped acoustic guitar" width="400" height="300">
+          <img src="/img/lespaul.jpg" alt="lespaul" width="400" height="300">
       </div>
     </div>
 
@@ -105,7 +105,7 @@
     <footer class="copyright">
       <p><i class="fa fa-copyright" aria-hidden="true"></i>&copy; elizabeth watkins ~ twenty-twenty-five ~ all rights reserved</p>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.min.js" integrity="sha384-VQqxDN0EQCkWoxt/0vsQvZswzTHUVOImccYmSyhJTp7kGtPed0Qcx8rK9h9YEgx+" crossorigin="anonymous"></script>
