--- a/html/index.html
+++ b/html/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>EMW</title>
 </head>
 <body>
   <div class="logo">
-    <a href="/html/index.html">
-      <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    <a href="../html/index.html">
+      <img src="../img/logo.jpg" alt="logo" width="200" height="200">
     </a>
   </div>
 
     <header class="nav-bar-background sticky-navbar">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/html/index.html">home</a>
+              <a class="nav-link active" aria-current="page" href="../html/index.html">home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/about.html">about</a>
+              <a class="nav-link" href="../html/about.html">about</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contact.html">contact</a>
+              <a class="nav-link" href="../html/contact.html">contact</a>
             </li>
           </ul>
     </header>
@@ -37,9 +37,9 @@
       <h2>&#9749; coffee &#9749;</h2>
       <br>
       <div class="gallery-coffee">
-          <img src="/img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
-          <img src="/img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
-          <img src="/img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
+          <img src="../img/Coffee-Steam-Symmetrical.jpg" alt="coffee steam" width="300" height="200">
+          <img src="../img/Multi-Brew-Asymmetrical.jpg" alt="multi brew" width="300" height="200">
+          <img src="../img/Rounded-Latte-Art-Radial.jpg" alt="latte art" width="300" height="200">
       </div>
     </div>
 
@@ -47,8 +47,8 @@
       <h2>&#127928; guitar &#127928;</h2>
       <br>
       <div class="gallery-guitar">
-          <img src="/img/acoustic.jpg" alt="warped acoustic guitar" width="400" height="300">
-          <img src="/img/lespaul.jpg" alt="lespaul" width="400" height="300">
+          <img src="../img/acoustic.jpg" alt="warped acoustic guitar" width="400" height="300">
+          <img src="../img/lespaul.jpg" alt="lespaul" width="400" height="300">
       </div>
     </div>
 
@@ -56,12 +56,12 @@
       <h2>&#127776; star mission &#127776;</h2>
       <br>
       <div class="gallery-star-mission-1">
-          <img src="/img/star-mission_1.png" alt="star-mission_1" width="500" height="400">
-          <img src="/img/star-mission_2.png" alt="star-mission_2" width="500" height="400">
+          <img src="../img/star-mission_1.png" alt="star-mission_1" width="500" height="400">
+          <img src="../img/star-mission_2.png" alt="star-mission_2" width="500" height="400">
       </div>
       <div class="gallery-star-mission-2">
-          <img src="/img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
-          <img src="/img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
+          <img src="../img/star-mission_3.png" alt="star-mission_3" width="500" height="400">
+          <img src="../img/star-mission_4.png" alt="star-mission_4" width="500" height="400">
       </div>
     </div>
 
@@ -70,34 +70,34 @@
       <br>
       <div class="gallery-random-works">
         <div class="gallery-random-works-1">
-          <img src="/img/celery.jpg" alt="celery" width="300" height="200">
+          <img src="../img/celery.jpg" alt="celery" width="300" height="200">
         </div>
         <div class="gallery-random-works-2">
-          <img src="/img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
+          <img src="../img/friday-the-13th.jpg" alt="friday the 13th" width="300" height="200">
         </div>
         <div class="gallery-random-works-3">
-          <img src="/img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
+          <img src="../img/hand-sanitizer.jpg" alt="hand-sanitizer" width="300" height="200">
         </div>
         <div class="gallery-random-works-4">
-          <img src="/img/lollipop.jpg" alt="lollipop" width="300" height="200">
+          <img src="../img/lollipop.jpg" alt="lollipop" width="300" height="200">
         </div>
         <div class="gallery-random-works-5">
-          <img src="/img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
+          <img src="../img/superbowl-lvii.jpg" alt="superbowl-lvii" width="300" height="200">
         </div>
         <div class="gallery-random-works-6">
-          <img src="/img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
+          <img src="../img/moo-cow-ii.jpg" alt="moo cow" width="300" height="200">
         </div>
         <div class="gallery-random-works-7">
-          <img src="/img/popcorn.jpg" alt="popcorn" width="300" height="200">
+          <img src="../img/popcorn.jpg" alt="popcorn" width="300" height="200">
         </div>
         <div class="gallery-random-works-8">
-          <img src="/img/strawberry.jpg" alt="strawberry" width="300" height="200">
+          <img src="../img/strawberry.jpg" alt="strawberry" width="300" height="200">
         </div>
         <div class="gallery-random-works-9">
-          <img src="/img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
+          <img src="../img/sweet-onion.jpg" alt="sweet-onion" width="300" height="200">
         </div>
         <div class="gallery-random-works-10">
-          <img src="/img/Handshake.jpg" alt="Handshake" width="300" height="200">
+          <img src="../img/Handshake.jpg" alt="Handshake" width="300" height="200">
         </div>
       </div>
     </div>
