--- a/html/about.html
+++ b/html/about.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>about</title>
 </head>
 <body>
   <div class="logo">
-    <a href="/html/index.html">
-      <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    <a href="../html/index.html">
+      <img src="../img/logo.jpg" alt="logo" width="200" height="200">
     </a>
   </div>
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/html/index.html">home</a>
+              <a class="nav-link active" aria-current="page" href="../html/index.html">home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/about.html">about</a>
+              <a class="nav-link" href="../html/about.html">about</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contact.html">contact</a>
+              <a class="nav-link" href="../html/contact.html">contact</a>
             </li>
           </ul>
     </header>
@@ -33,7 +33,7 @@
     
     <div class="about-container">
       <div class="portrait-illustation-container">
-        <img src="/img/portrait-illustation.JPG" alt="portrait-illustation" width="400" height="500" class="portrait-illustation">
+        <img src="../img/portrait-illustation.JPG" alt="portrait-illustation" width="400" height="500" class="portrait-illustation">
       </div>
       <div class="about-statment">
           <p>Hi! I'm Elizabeth Watkins, a graphic designer and illustrator based in the United States. I love creating unique and eye-catching designs that tell a story. My work is inspired by my love for nature, art, and the world around me.
