--- a/html/contact.html
+++ b/html/contact.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>contact</title>
 </head>
 <body>
   <div class="logo">
-    <a href="/html/index.html">
-      <img src="/img/logo.jpg" alt="logo" width="200" height="200">
+    <a href="../html/index.html">
+      <img src="../img/logo.jpg" alt="logo" width="200" height="200">
     </a>
   </div>
 
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/html/index.html">home</a>
+              <a class="nav-link active" aria-current="page" href="../html/index.html">home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/about.html">about</a>
+              <a class="nav-link" href="../html/about.html">about</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/html/contact.html">contact</a>
+              <a class="nav-link" href="../html/contact.html">contact</a>
             </li>
           </ul>
     </header>
