Updating index.html location for all html files

--- a/html/contact.html
+++ b/html/contact.html
@@ -17,7 +17,7 @@
     <header class="nav-bar-background">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../html/index.html">home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../html/about.html">about</a>
